tests/org.eclipse.php.core.tests/workspace/errors/php53/testImportCheck.pdtt
--TEST--
Test for Bug 516219 - Fix use statements check with no namespace declared
--FILE--
<?php
use name\Foo;

--EXPECT--
[line=2, start=10, end=18] The import name\Foo is never used